example/secondfile/objects/Financing_history_tracking__c.object
<CustomObject>
    <description>Used for 3rd Party Financing approval and request history</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financing history trackings</relationshipLabel>
        <relationshipName>Financing_history_trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Number__c</fullName>
        <label>Approval Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Error_Response__c</fullName>
        <label>Error Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Type__c</fullName>
        <label>Finance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>GE Capital</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))
&amp;&quot;-&quot; 
&amp; TEXT(Month(DateValue(CreatedDate))) 
&amp;&quot;-&quot; 
&amp; TEXT(Day(DateValue(CreatedDate)))  
&amp;SUBSTITUTE(MID(TEXT(CreatedDate ), 12, 8), &quot;:&quot;, &quot;&quot;)</formula>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Amount__c</fullName>
        <label>Request Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Code__c</fullName>
        <label>Request Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <description>Name of the user who requested the approval.</description>
        <label>Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrigger_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retrigger Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>EBM</fullName>
                </value>
                <value>
                    <fullName>Request Cancel</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Archive Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Code_Formula__c</fullName>
        <formula>IF(ISPICKVAL( Finance_Type__c , &quot;GE Capital&quot;) , &quot;GE0&quot; &amp;  TEXT(Term_Code__c), null)</formula>
        <label>Term Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Code__c</fullName>
        <label>Term Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                    <default>true</default>
                    <label>60</label>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Party_Financed__c</fullName>
        <formula>IF(ISPICKVAL(Finance_Type__c, &quot;Direct&quot;),false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Party Financed</label>
        <type>Checkbox</type>
    </fields>
    <label>Financing history tracking</label>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Financing history tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financing history trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>